--- a/JS.html
+++ b/JS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FC</title>
+    <title>FALCON</title>
     <style>
  *  {
     margin: 0%; padding:0%;
@@ -31,7 +31,7 @@ nav .logo{
     width: 35%;
     font-style: italic;
     text-align:right ;
-    padding-right: 600px;
+    padding-right: 550px;
 }
  div{
 
