--- a/ab.html
+++ b/ab.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>FC</title>
+    <title>FALCON</title>
     <style>
          *  {
     margin: 0%; padding:0%;
@@ -8,7 +8,7 @@
 
 }
        body{
-           background-image: url(/images/pc3.jpg);
+           background-image: url(images/pc3.jpg);
            background-size: cover;
     background-position: center;
     background: solid;
