--- a/index.html
+++ b/index.html
@@ -27,18 +27,35 @@
 <section>
  <h3>Web Development</h3>
  <h1>Language <span class="change_content"> </span> <span style="margin-top: -10px;"></span></h1>
- <p>Coding never ends</p>
+ <h4>Coding never ends</h4>
  </section>
 
 </main>
+<footer>
+
+  <h2>FALCON CODE</h2> 
+  <section class="icon info">
+  <i class="fa-solid fa-location-dot"></i>
+  <p class="location">264-Lab, 3rd floor,PGGC,Sector-11,Chandigarh</p>
+  <br>
+  <i class="fa-solid fa-envelope"></i>
+  <p class="email">ivinaykhanduri@email.com</p>
+  
+  <div class="icon">
+    <h5>
+      <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></h5>
+
+  <h6>
+      <a href="https://www.instagram.com/vinny9.7/"><i class="fa fa-instagram"></i></a></h6>
+  </div>
+  </secton>
+  
 
 
-  <footer>Social Media:
-      <h4>
-          <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></h4>
+</footer>
 
-      <h5>
-          <a href="https://www.instagram.com/vinny9.7/"><i class="fa fa-instagram"></i></a></h5>
-    </footer>
+
+
+  
 </body>
 </html>
