--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
         <a href="JS.html">JS</a>
         <a href="ab.html">AboutUs</a>
     </nav> 
-    
-<main>
+  <main>
 <section>
  <h3>Web Development</h3>
- <h1>Language <span class="change_content"> </span> <span style="margin-top: -10px;"></span></h1>
+ <h1>Language <span class="change_content"> </span> </h1>
  <h4>Coding never ends</h4>
  </section>
-
 </main>
+
 <footer>
 
   <h2>FALCON CODE</h2> 
@@ -49,13 +48,6 @@
       <a href="https://www.instagram.com/vinny9.7/"><i class="fa fa-instagram"></i></a></h6>
   </div>
   </secton>
-  
-
-
 </footer>
-
-
-
-  
 </body>
 </html>
