--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
  <h4>Coding never ends</h4>
  </section>
 </main>
+    <footer>
 
-<footer>
+        <h2>FALCON CODE</h2>
+        <div class="back">
+            <i class="fa-solid fa-location-dot"></i>
+            <p class="location">264-Lab, 3rd floor,PGGC,Sector-11,Chandigarh</p>
+            <br>
+            <i class="fa-solid fa-envelope"></i>
+            <p class="email">ivinaykhanduri@email.com</p>
+            <div class="yam">
 
-  <h2>FALCON CODE</h2> 
-  <section class="icon info">
-  <i class="fa-solid fa-location-dot"></i>
-  <p class="location">264-Lab, 3rd floor,PGGC,Sector-11,Chandigarh</p>
-  <br>
-  <i class="fa-solid fa-envelope"></i>
-  <p class="email">ivinaykhanduri@email.com</p>
-  
-  <div class="icon">
-    <h5>
-      <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a></h5>
+                <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
 
-  <h6>
-      <a href="https://www.instagram.com/vinny9.7/"><i class="fa fa-instagram"></i></a></h6>
-  </div>
-  </secton>
-</footer>
+                <a href="https://www.instagram.com/vinny9.7/"><i class="fa fa-instagram"></i></a><a
+                    href="https://www.instagram.com/vinny9.7/"><i class="fa fa-youtube"></i></a>
+                    <div class="creat">
+                        Created By : @VinayKhanduri
+                    </div>
+        </div>
+    </footer>
 </body>
 </html>
